@@ -1,3 +1,8 @@
+2002-01-06  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* Defaults.py (TMDARC): Let tmda-filter catch the exception if
+	there is one raised when trying to read the ~/.tmdarc.
+
 2002-01-05  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* Errors.py: import of sys and Defaults no longer necessary, and
